@@ -132,25 +132,29 @@ public class CompositeAggregationBuilderTests extends BaseAggregationTestCase<Co
             }
         });
         assertFalse(builder.supportsParallelCollection(null));
-        // A (non-script) terms source supports parallel collection regardless of the field cardinality, and must not
-        // consult the resolver at all - doing so would build global ordinals, which the segment-ordinal path avoids.
-        // A resolver that throws proves the cardinality is never resolved.
-        ToLongFunction<String> mustNotResolve = field -> { throw new AssertionError("field cardinality must not be resolved"); };
-        assertTrue(
+        assertFalse(
             new CompositeAggregationBuilder(randomAlphaOfLength(10), Collections.singletonList(new TermsValuesSourceBuilder("name")))
-                .supportsParallelCollection(mustNotResolve)
+                .supportsParallelCollection(field -> -1)
         );
         assertTrue(
-            new CompositeAggregationBuilder(
-                randomAlphaOfLength(10),
-                List.of(randomDateHistogramSourceBuilder(), new TermsValuesSourceBuilder("name"))
-            ).supportsParallelCollection(mustNotResolve)
+            new CompositeAggregationBuilder(randomAlphaOfLength(10), Collections.singletonList(new TermsValuesSourceBuilder("name")))
+                .supportsParallelCollection(field -> randomIntBetween(0, 50))
+        );
+        assertFalse(
+            new CompositeAggregationBuilder(randomAlphaOfLength(10), Collections.singletonList(new TermsValuesSourceBuilder("name")))
+                .supportsParallelCollection(field -> randomIntBetween(51, 100))
         );
         assertFalse(
             new CompositeAggregationBuilder(
                 randomAlphaOfLength(10),
                 Collections.singletonList(new TermsValuesSourceBuilder("name").script(new Script("id")))
             ).supportsParallelCollection(field -> randomIntBetween(-1, 100))
+        );
+        assertFalse(
+            new CompositeAggregationBuilder(
+                randomAlphaOfLength(10),
+                List.of(randomDateHistogramSourceBuilder(), new TermsValuesSourceBuilder("name"))
+            ).supportsParallelCollection(field -> randomIntBetween(51, 100))
         );
     }
 }
